[package]
name = 'sugarfunge-bridge'
version = "0.1.0"
authors = ["david@chainsafe.io", "SugarFunge Developers"]
edition = '2021'

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", optional = true }

# primitives
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }

# frame dependencies
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }

sugarfunge-primitives = { package = "sugarfunge-primitives", path = "../../primitives", default-features = false }
sugarfunge-asset = { package = "sugarfunge-asset", path = "../asset", default-features = false }

pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }

[build-dependencies]
wasm-builder-runner = { version = "2.0.0", package = "substrate-wasm-builder-runner"}
[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
    "sp-io/std",
    "sp-core/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sugarfunge-primitives/std",
	"sugarfunge-asset/std",
]
runtime-benchmarks = [
	"frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks"
]
