[package]
name = "sugarfunge-currency"
version = "0.1.0"
authors = ["SugarFunge Developers"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.124", optional = true }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }

orml-traits = { version = "0.4.1-dev", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "master" }

primitives = { package = "sugarfunge-primitives", path = "../../primitives", default-features = false }
token = { package = "sugarfunge-token", path = "../token", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-io/std",
    "sp-std/std",
    "sp-core/std",
    "orml-traits/std",
	"primitives/std",
	"token/std",
]
