[package]
name = "sugarfunge-currency"
version = "0.1.0"
authors = ["SugarFunge Developers"]
edition = "2021"
license = "Proprietary"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }

orml-traits = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/SugarFunge/open-runtime-module-library.git" }

sugarfunge-primitives = { package = "sugarfunge-primitives", path = "../../primitives", default-features = false }
sugarfunge-asset = { package = "sugarfunge-asset", path = "../asset", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
orml-currencies = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/SugarFunge/open-runtime-module-library.git" }
orml-tokens = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/SugarFunge/open-runtime-module-library.git" }
sugarfunge-asset = { package = "sugarfunge-asset", path = "../asset", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-sudo/std",
    "sp-runtime/std",
    "sp-io/std",
    "sp-std/std",
    "sp-core/std",
    "orml-traits/std",
	"sugarfunge-primitives/std",
	"sugarfunge-asset/std",
]
