[package]
name = "sugarfunge-dex"
version = "0.1.0"
authors = ["SugarFunge Developers"]
edition = "2021"
license = "Proprietary"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
integer-sqrt = "0.1.2"
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }

sugarfunge-primitives = { package = "sugarfunge-primitives", path = "../../primitives", default-features = false }
sugarfunge-asset = { package = "sugarfunge-asset", path = "../asset", default-features = false }
sugarfunge-currency = { package = "sugarfunge-currency", path = "../currency", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
orml-traits = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/SugarFunge/open-runtime-module-library.git" }
orml-currencies = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/SugarFunge/open-runtime-module-library.git" }
orml-tokens = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/SugarFunge/open-runtime-module-library.git" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-io/std",
    "sp-runtime/std",
    "pallet-timestamp/std",
    "sp-core/std",
    "sugarfunge-primitives/std",
    "sugarfunge-asset/std",
    "sugarfunge-currency/std",
]
