[package]
name = "sf-fungible-assets"
version = "0.1.0"
authors = ["Anonymous"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
hex = { version = "2.1.0", package = "rustc-hex", default-features = false }
serde = { version = "1.0.101", optional = true }

frame-support = { git = "https://github.com/SugarFunge/substrate", default-features = false }
frame-system = { git = "https://github.com/SugarFunge/substrate", default-features = false }
sp-io = {  git = "https://github.com/SugarFunge/substrate", default-features = false }
sp-core = {  git = "https://github.com/SugarFunge/substrate", default-features = false }
sp-std = {  git = "https://github.com/SugarFunge/substrate", default-features = false }
sp-runtime = {  git = "https://github.com/SugarFunge/substrate", default-features = false }
sf-primitives = { path = "../../primitives", default-features = false }
frame-benchmarking = { git = "https://github.com/SugarFunge/substrate", default-features = false, optional = true }
pallet-balances = {git = "https://github.com/SugarFunge/substrate", version = "3.0.0", default-features = false }

orml-traits = { git = "https://github.com/SugarFunge/open-runtime-module-library.git", branch="sugarfunge", default-features = false }
orml-currencies = { git = "https://github.com/SugarFunge/open-runtime-module-library.git", branch="sugarfunge", default-features = false }
orml-tokens = { git = "https://github.com/SugarFunge/open-runtime-module-library.git", branch="sugarfunge", default-features = false }

[dev-dependencies]
sp-keyring = {  git = "https://github.com/SugarFunge/substrate", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "hex/std",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-std/std",
    "sp-io/std",
    "sp-runtime/std",
    "sf-primitives/std",
    "orml-tokens/std",
    "orml-currencies/std",
    "pallet-balances/std",
]
runtime-benchmarks = ["frame-benchmarking"]