[package]
authors = ['Alex Rozgo <alex.rozgo@gmail.com>']
description = 'SugarFunge inventory pallet.'
edition = '2018'
homepage = 'https://sugarfunge.io'
license = 'Unlicense'
name = 'pallet-sf-inventory'
readme = 'README.md'
repository = 'https://github.com/SugarFunge/sf-node/'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
# frame-support = { git = "https://github.com/SugarFunge/substrate.git", version = "3.0.0", default-features = false }
# frame-system = { git = "https://github.com/SugarFunge/substrate.git", version = "3.0.0", default-features = false }
# frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/SugarFunge/substrate.git", version = "3.1.0" }
# sp-std = { git = "https://github.com/SugarFunge/substrate.git", version = "3.0.0", default-features = false }

frame-support = { git = "https://github.com/SugarFunge/substrate.git", default-features = false }
frame-system = { git = "https://github.com/SugarFunge/substrate.git", default-features = false }
sp-io = {  git = "https://github.com/SugarFunge/substrate.git", default-features = false }
sp-core = {  git = "https://github.com/SugarFunge/substrate.git", default-features = false }
sp-std = {  git = "https://github.com/SugarFunge/substrate.git", default-features = false }
sp-runtime = {  git = "https://github.com/SugarFunge/substrate.git", default-features = false }
frame-benchmarking = { git = "https://github.com/SugarFunge/substrate.git", default-features = false, optional = true }

[dev-dependencies]
serde = { version = "1.0.119" }
# sp-core = { git = "https://github.com/SugarFunge/substrate.git", version = "3.0.0", default-features = false }
# sp-io = { git = "https://github.com/SugarFunge/substrate.git", version = "3.0.0", default-features = false }
# sp-runtime = { git = "https://github.com/SugarFunge/substrate.git", version = "3.0.0", default-features = false }

[features]
default = ['std']
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
    "sp-core/std",
    "sp-std/std",
    "sp-io/std",
    "sp-runtime/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
# Note: frame-support `try-runtime` feature is released after v3.
#   Uncomment the following line when `frame-support` version > `3.0.0`.
# try-runtime = ['frame-support/try-runtime']
